test/good/generics/complex05.px

func call<Any A, Any B>(A x, A->B f) B def
    return f(x)

print call(-1.0, 3*_.toString()),
      call(["ABC"], _[0][1])
