test/bad/generics/type04.px

func f<A,B>(A x, B y) A def
    return x * y

f(4, [4.2])
